--- a/grid.css
+++ b/grid.css
@@ -3,8 +3,9 @@
 ======================================== */
 
 .grid {
-  max-width: 800px;
+  max-width: 100%;
+  max-height: 100%;
   display: grid;
-  grid-template-columns: 33.3333% auto;
+  grid-template-columns: auto;
   /*grid-template-rows: 200px;*/
 }
