--- a/page.css
+++ b/page.css
@@ -9,10 +9,9 @@ body {
   font-family: philosopher, sans-serif;
   font-weight: 400;
   font-style: normal;
-	color: #6e859c;
+	color: #000;
   padding: 0;
   margin: 0;
-	background: #e8e9e9;
 }
 .grid {
   background: #fff;
@@ -21,9 +20,8 @@ body {
 .item {
   font-size: 1.4em;
   color: #000;
-  text-shadow: 0 2px 0 rgba(110,133,156,0.18);
   padding: 1.2em;
-  background: #b3b3b3;
+	text-align: center;
 }
 
 .special {
